Configure code for analyze and splitting train-val dataset - coco text

--- a/coco-text/coco_split_train.ipynb
+++ b/coco-text/coco_split_train.ipynb
@@ -1,22 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1 Demo for the COCO-Text data API "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this demo, we will learn how to load the COCO-Text data using the python API.\n",
-    "\n",
-    "Let's first import the `coco_text` tool API package. "
-   ]
-  },
-  {
    "cell_type": "code",
    "metadata": {
     "collapsed": false
@@ -24,35 +8,26 @@
    "source": [
     "import coco_text\n",
     "import os, glob, sys, shutil\n",
-    "import math"
+    "import math\n",
+    "from multiprocessing import Pool\n",
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "import skimage.io as io\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pylab\n",
+    "pylab.rcParams['figure.figsize'] = (10.0, 8.0)"
    ],
    "outputs": [],
    "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Make sure that you have downloaded the annotation file from the website.\n",
-    "\n",
-    "Once downloaded, you can import the annotations in the following way:"
-   ]
   },
   {
    "cell_type": "code",
    "metadata": {
     "collapsed": false
    },
-   "source": "ct = coco_text.COCO_Text('/home/thomas/coco/text_labels/COCO_Text.json')",
+   "source": "ct = coco_text.COCO_Text('data/coco/COCO_Text.json')",
    "outputs": [],
    "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, lets use the API. First, the API offers some basic infos of the dataset."
-   ]
   },
   {
    "cell_type": "code",
@@ -68,85 +43,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "### Select annotations and images based on filter criteria"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's now go on to the annotations. We want to get a list of all annotation ids from the validation set that are legible, machine printed and have an area between 0 and 200 pixels."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "anns = ct.getAnnIds(imgIds=ct.val, \n",
-    "                        catIds=[('legibility','legible'),('class','machine printed')], \n",
-    "                        areaRng=[0,200])"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2 Visualize COCOText Annotations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In order to visualize the COCO Text annotations, please make sure to download the COCO Images from the MSCOCO website: http://mscoco.org/dataset/#download "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "After downloading the images, specify the path to the MSCOCO image data."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "dataDir='/home/thomas/coco'\n",
-    "dataType='train2014'"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lets now import some useful tools to visualize the COCO images and annotations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "%matplotlib inline\n",
-    "import numpy as np\n",
-    "import skimage.io as io\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pylab\n",
-    "pylab.rcParams['figure.figsize'] = (10.0, 8.0)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   "source": "# Analyze train dataset"
   },
   {
    "metadata": {},
@@ -233,31 +130,30 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Extract train data"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": [
-    "# get all images containing at least one instance of legible text\n",
-    "imgIds = ct.getImgIds(imgIds=ct.train, \n",
-    "                    catIds=[('legibility','legible'), ('class','machine printed')])\n",
-    "# anns_train = ct.getAnnIds(imgIds=ct.train, \n",
-    "#                         catIds=[('legibility','legible')])\n",
-    "# pick one at random\n",
-    "img_coco_text_train = []\n",
-    "img_true_coco_train = os.listdir('/home/thomas/coco/train2014')\n",
-    "img_coco_text_train_filename = []\n",
-    "for i in ct.loadImgs(imgIds):\n",
-    "    if i['file_name'] in img_true_coco_train:\n",
-    "        img_coco_text_train_filename.append(i['file_name'])\n",
-    "        anns = []\n",
-    "        for ann in ct.loadAnns(ct.getAnnIds(imgIds = i['id'], catIds = [('legibility','legible')])):\n",
-    "            left, top, w, h = ann['bbox']\n",
-    "            width, height = i['width'], i['height']\n",
-    "            xywh = [(left + w / 2) / width, (top + h / 2) / height, w / width, h / height]\n",
-    "            line = 0, *xywh  # YOLO format (class_index, xywh)\n",
-    "            ann_filename = i[\"file_name\"].split('.jpg')[0]\n",
-    "            with open(f'/home/thomas/coco/text_labels/{ann_filename}.txt', 'a') as f:\n",
-    "                f.write((\"%g \" * len(line)).rstrip() % line + \"\\n\")\n",
+    "# img_coco_text_train = []\n",
+    "# img_true_coco_train = os.listdir('data/coco/train2014')\n",
+    "# \n",
+    "# for i in ct.loadImgs(imgIds):\n",
+    "#     if i['file_name'] in img_true_coco_train:\n",
+    "#         img_coco_text_train_filename.append(i['file_name'])\n",
+    "#         anns = []\n",
+    "#         for ann in ct.loadAnns(ct.getAnnIds(imgIds = i['id'], catIds = [('legibility','legible'), ('class','machine printed')])):\n",
+    "#             left, top, w, h = ann['bbox']\n",
+    "#             width, height = i['width'], i['height']\n",
+    "#             xywh = [(left + w / 2) / width, (top + h / 2) / height, w / width, h / height]\n",
+    "#             line = 0, *xywh  # YOLO format (class_index, xywh)\n",
+    "#             ann_filename = i[\"file_name\"].split('.jpg')[0]\n",
+    "#             with open(f'data/coco/labels/train/{ann_filename}.txt', 'a') as f:\n",
+    "#                 f.write((\"%g \" * len(line)).rstrip() % line + \"\\n\")\n",
     "        "
    ]
   },
@@ -267,250 +163,56 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "from multiprocessing import Pool\n",
+    "def JSON2YOLO(coco_train, true_train):\n",
+    "    # print(coco_train['file_name'])\n",
+    "    temp_filename = []\n",
+    "    # for i in coco_train:\n",
+    "    if coco_train['file_name'] in true_train:\n",
+    "        temp_filename.append(coco_train['file_name'])\n",
+    "        # anns = []\n",
+    "        for ann in ct.loadAnns(ct.getAnnIds(imgIds = coco_train['id'], catIds = [('legibility','legible'), ('class','machine printed')])):\n",
+    "            left, top, w, h = ann['bbox']\n",
+    "            width, height = coco_train['width'], coco_train['height']\n",
+    "            xywh = [(left + w / 2) / width, (top + h / 2) / height, w / width, h / height]\n",
+    "            line = 0, *xywh  # YOLO format (class_index, xywh)\n",
+    "            ann_filename = coco_train[\"file_name\"].split('.jpg')[0]\n",
+    "            with open(f'data/coco/labels/train/{ann_filename}.txt', 'a') as f:\n",
+    "                f.write((\"%g \" * len(line)).rstrip() % line + \"\\n\")\n",
+    "    return temp_filename"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# get all images containing at least one instance of legible text\n",
+    "imgIds = ct.getImgIds(imgIds=ct.train, \n",
+    "                    catIds=[('legibility','legible'), ('class','machine printed')])\n",
+    "img_true_coco_train = os.listdir('data/coco/train2014')\n",
+    "img_coco_text_train = ct.loadImgs(imgIds)\n",
+    "img_coco_text_train_filename = []\n",
+    "items = [(i, img_true_coco_train) for i in img_coco_text_train]\n",
+    "with Pool(processes = 28) as pool:\n",
+    "    print(len(items))\n",
+    "    for results in pool.starmap(JSON2YOLO, items):\n",
+    "        img_coco_text_train_filename.extend(results)"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
     "def movefile(filename):\n",
-    "    old_path = f'/home/thomas/coco/train2014/{filename}'\n",
-    "    new_path = f'/home/thomas/coco/images/train/{filename}'\n",
+    "    old_path = f'data/coco/train2014/{filename}'\n",
+    "    new_path = f'data/coco/images/train/{filename}'\n",
     "    shutil.move(old_path, new_path)\n",
     "with Pool(processes = 28) as pool:\n",
     "    pool.map(movefile, img_coco_text_train_filename)\n"
    ]
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-24T03:35:35.298272Z",
-     "start_time": "2024-06-24T03:35:32.127667Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "imgIds = ct.getImgIds(imgIds=ct.train, \n",
-    "                    catIds=[('legibility','legible'), ('class','machine printed')])\n",
-    "img_coco_text_train = []\n",
-    "img_true_coco_train = os.listdir('/home/thomas/coco/images/train')\n",
-    "img_coco_text_train_filename = []\n",
-    "for i in ct.loadImgs(imgIds):\n",
-    "    if i['file_name'] in img_true_coco_train:\n",
-    "        img_coco_text_train_filename.append(i['file_name'])\n",
-    "\n",
-    "def movefile(filename):\n",
-    "    old_path = f'/home/thomas/coco/images/train/{filename}'\n",
-    "    new_path = f'/home/thomas/coco/machine_printed_images/train/{filename}'\n",
-    "    shutil.move(old_path, new_path)\n",
-    "    # label_name = filename.split('.jpg')[0] + '.txt'\n",
-    "    # old_path = f'/home/thomas/coco/labels/train/{label_name}'\n",
-    "    # new_path = f'/home/thomas/coco/labels_not_machine_printed/{label_name}'\n",
-    "    # shutil.move(old_path, new_path)\n",
-    "with Pool(processes = 30) as pool:\n",
-    "    pool.map(movefile, img_coco_text_train_filename)\n"
-   ],
-   "outputs": [],
-   "execution_count": 122
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can now load the image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "I = io.imread('%s/%s/%s'%(dataDir,dataType,\"COCO_train2014_000000294914.jpg\"))\n",
-    "print('/images/%s/%s'%(dataType,\"COCO_train2014_000000294914.jpg\"))\n",
-    "plt.figure()\n",
-    "plt.imshow(I)"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lastly, we can load and display the text annotations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "# load and display text annotations\n",
-    "plt.imshow(I)\n",
-    "annIds = ct.getAnnIds(imgIds=294914, catIds=[('legibility','legible')])\n",
-    "anns = ct.loadAnns(annIds)\n",
-    "ct.showAnns(anns)\n",
-    "print(len(anns))"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3 Demo for the COCO-Text evaluation API"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this demo we will learn how to use the COCO-Text evaluation API to evaluate text detection and recognition results.\n",
-    "\n",
-    "First, let's import the `coco_text_evaluation` API.  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "import coco_evaluation"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, we have to load our recognition results. For this we can use the `loadRes()` function from the `coco_text` tool.\n",
-    "\n",
-    "The results have to be saved in the format explained on the website. The '`our_results.json`' file gives an example. Generally, the detections are saved in a json file and form a list of dictionaries like the following:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    [{\"image_id\": int,\n",
-    "      \"bbox\": [left, top, width, height],\n",
-    "      \"utf8_string\": string\"},\n",
-    "      {}...]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Then, we can load the results like this:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "our_results = ct.loadRes('our_results.json')"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If the results file contains annotations for images not in the current version of COCO-Text, the loader will notify\n",
-    "that some images are skipped and then ignore the respective annotations. This happens for example, if results for the test set are included in the same file."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Detection results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Once the resutls are loaded, the evalution tool allows to compute the successful detections with the '`getDetections()`' function. The `detection_threshold` parameter defines how closely the bounding boxes need to overlap. The default value is an Intersection over Union (IoU) score of 0.5. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "our_detections = coco_evaluation.getDetections(ct, our_results, detection_threshold = 0.5)"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The detection results comprise three lists: True Positives, False Positives and False Negatives."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "print('True positives have a ground truth id and an evaluation id: ', our_detections['true_positives'][0])\n",
-    "print('False positives only have an evaluation id: ', our_detections['false_positives'][0])\n",
-    "print('True negatives only have a ground truth id: ', our_detections['false_negatives'][0])"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### End-to-end results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's look into the transcription performance now. For that we ue the '`evaluateTranscription()`' function. And provide our results and detections."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "our_endToEnd_results = coco_evaluation.evaluateEndToEnd(ct, our_results, detection_threshold = 0.5)"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we are ready to see the results. For that we can use the '`printDetailedResults()`' function. The last line can be used to create a table as shown in the paper."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "coco_evaluation.printDetailedResults(ct,our_detections,our_endToEnd_results,'our approach')"
-   ],
-   "outputs": [],
-   "execution_count": null
   }
  ],
  "metadata": {
