--- a/coco-text/coco_split_val.ipynb
+++ b/coco-text/coco_split_val.ipynb
@@ -36,7 +36,7 @@
    "execution_count": 1,
    "source": [
     "from multiprocessing.pool import Pool\n",
-    "ct = coco_text.COCO_Text('/home/thomas/coco/text_labels/COCO_Text.json')\n",
+    "ct = coco_text.COCO_Text('data/coco/COCO_Text.json')\n",
     "# get all images containing at least one instance of legible text\n",
     "imgIds = ct.getImgIds(imgIds=ct.val, \n",
     "                    catIds=[('legibility','legible')])\n",
@@ -44,10 +44,16 @@
     "#                         catIds=[('legibility','legible')])\n",
     "# pick one at random\n",
     "img_coco_text_val = ct.loadImgs(imgIds)\n",
-    "img_true_coco_val = os.listdir('/home/thomas/coco/train2014')   \n",
+    "img_true_coco_val = os.listdir('data/coco/train2014')   \n",
     "img_coco_text_val_filename = []"
    ],
    "id": "initial_id"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Analyze validation data",
+   "id": "19c39646e0bace14"
   },
   {
    "metadata": {
@@ -160,6 +166,12 @@
    "execution_count": 22
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Extract validation data",
+   "id": "61cd482a16e56937"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-23T15:12:57.018643Z",
@@ -175,13 +187,13 @@
     "    if coco_val['file_name'] in true_val:\n",
     "        temp_filename.append(coco_val['file_name'])\n",
     "        # anns = []\n",
-    "        for ann in ct.loadAnns(ct.getAnnIds(imgIds = coco_val['id'], catIds = [('legibility','legible')])):\n",
+    "        for ann in ct.loadAnns(ct.getAnnIds(imgIds = coco_val['id'], catIds = [('legibility','legible'), ('class','machine printed')])):\n",
     "            left, top, w, h = ann['bbox']\n",
     "            width, height = coco_val['width'], coco_val['height']\n",
     "            xywh = [(left + w / 2) / width, (top + h / 2) / height, w / width, h / height]\n",
     "            line = 0, *xywh  # YOLO format (class_index, xywh)\n",
     "            ann_filename = coco_val[\"file_name\"].split('.jpg')[0]\n",
-    "            with open(f'/home/thomas/coco/val/{ann_filename}.txt', 'a') as f:\n",
+    "            with open(f'data/coco/labels/val/{ann_filename}.txt', 'a') as f:\n",
     "                f.write((\"%g \" * len(line)).rstrip() % line + \"\\n\")\n",
     "\n",
     "    return temp_filename\n",
@@ -213,46 +225,13 @@
    "cell_type": "code",
    "source": [
     "for i in img_coco_text_val_filename:\n",
-    "    old_path = f'/home/thomas/coco/train2014/{i}'\n",
-    "    new_path = f'/home/thomas/coco/images/val/{i}'\n",
+    "    old_path = f'data/coco/train2014/{i}'\n",
+    "    new_path = f'data/coco/images/val/{i}'\n",
     "    shutil.move(old_path, new_path)"
    ],
    "id": "2fb6fa1d19cdca89",
    "outputs": [],
    "execution_count": 17
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-24T03:38:03.280296Z",
-     "start_time": "2024-06-24T03:38:02.155229Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "imgIds = ct.getImgIds(imgIds=ct.val, \n",
-    "                    catIds=[('legibility','legible'), ('class','machine printed')])\n",
-    "img_coco_text_val = []\n",
-    "img_true_coco_val = os.listdir('/home/thomas/coco/images/val')\n",
-    "img_coco_text_val_filename = []\n",
-    "for i in ct.loadImgs(imgIds):\n",
-    "    if i['file_name'] in img_true_coco_val:\n",
-    "        img_coco_text_val_filename.append(i['file_name'])\n",
-    "\n",
-    "def movefile(filename):\n",
-    "    old_path = f'/home/thomas/coco/images/val/{filename}'\n",
-    "    new_path = f'/home/thomas/coco/machine_printed_images/val/{filename}'\n",
-    "    shutil.move(old_path, new_path)\n",
-    "    label_name = filename.split('.jpg')[0] + '.txt'\n",
-    "    old_path = f'/home/thomas/coco/labels/val/{label_name}'\n",
-    "    new_path = f'/home/thomas/coco/new_labels/val/{label_name}'\n",
-    "    shutil.move(old_path, new_path)\n",
-    "with Pool(processes = 30) as pool:\n",
-    "    pool.map(movefile, img_coco_text_val_filename)\n"
-   ],
-   "id": "e8284305c43b8ddf",
-   "outputs": [],
-   "execution_count": 23
   }
  ],
  "metadata": {
